<resources>
    <string name="app_name">MyGarage</string>
    <string name="title_home">HOME</string>
    <string name="title_notifications">NOTIFICATIONS</string>
    <string name="new_car_content_description">Add new car</string>
    <string name="add_new_car">ADD</string>
    <string name="mileage_text">Mileage</string>
    <string name="price_add">Price</string>
    <string name="seats_add">Seats</string>
    <string name="power_add">Power (kW)</string>
    <string name="fuel_type_add">Fuel Type</string>
    <string name="model_add">Model</string>
    <string name="year_add">Production Year</string>
    <string name="brand_add">Brand</string>
    <string name="new_car">NEW CAR</string>
    <string name="title_garage">MY GARAGE</string>
    <string name="min_price">Min</string>
    <string name="max_price">Max</string>
    <string name="price_search_label">PRICE RANGE</string>
    <string name="brand_search">Brand</string>
    <string name="brand_search_label">BRAND AND MODEL</string>
    <string name="model_price">Model</string>
    <string name="search_car">SEARCH</string>
    <string name="fuel_type_detail_string">Fuel type: %s</string>
    <string name="year_detail_string">Year of production: %s</string>
    <string name="price_detail_string">PRICE: %s</string>
    <string name="power_detail_string">Engine power: %s</string>
    <string name="detail">CAR INFO</string>
    <string name="other_detail">Other</string>
    <string name="card_detail_name">YOUR CAR</string>
    <string name="title_new_car">ADD</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="mileage_detail_string">Mileage: %s</string>
    <string name="delete_car_content_description">Delete car</string>

    <!-- NOTIFICATION STRINGS -->
    <string name="service_car_expired_text">Your car service for %s has expired</string>
    <string name="service_car_context_text">Please do a checkup when possible</string>

    <!-- DIALOG DELETE -->
    <string name="delete_dialog_title">Delete Car</string>
    <string name="delete_dialog_message">Are you sure do you want to delete this car from your garage? (Also the notification of the car will be destroyed)</string>
    <string name="delete_dialog_positive_button">Yes</string>
    <string name="delete_dialog_negative_button">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_to_delete">SWIPE TO DELETE</string>
    <string name="brand_label_notification_item">BRAND</string>
    <string name="model_label_notification_item">MODEL</string>
    <string name="mileage_label_notification_item">MILEAGE</string>
    <string name="title_add_car">ADD CAR</string>
    <string name="error_snackbar">Error not all fields are filled in correctly</string>
    <string name="blank_brand">The brand cannot be empty</string>
    <string name="error_year">The year of production can\'t be less than 1800</string>
    <string name="blank_model">The model field cannot be empty</string>
    <string name="blank_fuel">The fuel field cannot be empty</string>
    <string name="error_price">Price can\'t be 0 or less</string>
    <string name="error_power">The power can\'t be less than 1 or more than 3000</string>
    <string name="error_km">The mileage field can\'t be 0 (or less) or more than 1000000</string>
    <string name="choose_fuel_type_title">FUEL</string>
    <string name="delete_car_dialog_positive_button">Ok</string>
    <string name="delete_car_dialog_negative_button">Cancel</string>
    <string name="choose_car">CHOOSE A BRAND</string>
    <string name="no_brand">Hey you have to choose a brand to continue.</string>
    <string name="no_model">Hey you have to choose a model to continue.</string>
    <string name="choose_model">CHOOSE A MODEL</string>
    <string name="details">DETAILS</string>
</resources>