<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint_layout_add_new_car"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addCar.AddNewCarFragment"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/new_car"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/car_brand_add_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/car_brand_add_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/car_brand_add_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand_add"
            android:inputType="text"></com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/car_year_add_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_brand_add_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/car_year_add_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year_add"
            android:inputType="number">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/car_model_add_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_year_add_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/car_model_add_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/model_add"
            android:inputType="text">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/car_fuel_type_add_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_model_add_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/car_fuel_type_add_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fuel_type_add"
            android:inputType="text">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/car_power_add_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_fuel_type_add_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/car_power_add_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/power_add"
            android:inputType="number">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/car_price_add_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_power_add_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/car_price_add_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_add"
            android:inputType="numberDecimal">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/car_mileage_add_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_price_add_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/car_mileage_add_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mileage_text"
            android:inputType="numberDecimal">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_add_new_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="16dp"
        android:text="@string/add_new_car"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_mileage_add_label"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>
