<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="car"
            type="com.example.mygarage.model.Car" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_car_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.carDetail.CarDetailFragment">


        <ImageView
            android:id="@+id/detail_car_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="4dp"
            android:contentDescription="Car Image"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/model_detail"></ImageView>

        <TextView
            android:id="@+id/brand_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:text="@{car.brand}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="FERRARI" />

        <ImageView
            android:id="@+id/logo_detail"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="Car Logo"
            android:src="@drawable/ic_baseline_directions_car_filled_24"
            app:layout_constraintBottom_toTopOf="@+id/detail_car_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/brand_detail" />

        <TextView
            android:id="@+id/model_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="33sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/brand_detail"
            app:layout_constraintTop_toBottomOf="@+id/brand_detail"
            tools:text="F40" />

        <TextView
            android:id="@+id/price_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/model_detail"
            app:layout_constraintTop_toBottomOf="@+id/detail_car_image"
            tools:text="PREZZO" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/detail"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/model_detail"
            app:layout_constraintTop_toBottomOf="@+id/price_title"
            tools:text="DETTAGLI" />

        <TextView
            android:id="@+id/more_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_detail"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/logo_detail"
            app:layout_constraintTop_toTopOf="@+id/detail_title"
            tools:text="ALTRO" />

        <TextView
            android:id="@+id/car_power_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_title" />

        <TextView
            android:id="@+id/car_mileage_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/car_power_detail"
            app:layout_constraintTop_toBottomOf="@+id/car_power_detail" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/car_power_detail" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/car_mileage_detail" />

        <TextView
            android:id="@+id/car_production_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/car_fuel_detail"
            app:layout_constraintTop_toBottomOf="@+id/car_fuel_detail" />

        <TextView
            android:id="@+id/car_fuel_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/car_mileage_detail"
            app:layout_constraintTop_toBottomOf="@+id/car_mileage_detail" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="?attr/dividerHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_title" />

        <View
            android:id="@+id/divider_vertical"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="?attr/dividerHorizontal"
            app:layout_constraintBottom_toBottomOf="@+id/car_production_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/car_fuel_detail" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/car_production_detail" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/modify_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/delete_car_content_description"
            android:src="@drawable/ic_baseline_mode_24"
            app:layout_constraintBottom_toTopOf="@+id/delete_fab"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/delete_car_content_description"
            android:src="@drawable/ic_baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>